# whisper-triton-api

./: .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  main.py  main_dev.py  pyproject.toml  run.sh  start-dev.sh
models/whisper/: config.pbtxt
models/whisper/1/: model.py  tokenizer.py
speech2text/: __init__.py
speech2text/application/: __init__.py  api.py  app.py  whisper_spec.py
speech2text/application/rest/: rest_api.py
speech2text/application/websocket/: connection_manager.py  web_socket_api.py
speech2text/domain/: __init__.py  transcribe_service.py
speech2text/domain/preprocessing/: async_wrap.py  preprocessing.py
speech2text/infrastrusture/: __init__.py  async_wrap.py
speech2text/infrastrusture/speech2text/: client.py  utils.py
stress-tests/: prepare_datasets.sh  run_locust.sh  show_rtf.py  stress.py
tests/: test_speech2text_api.py
