[tool.poetry]
name = "virtual-staff"
version = "0.1.0"
description = ""
authors = ["David Minier"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kaldialign = "^0.9"
soundfile = "^0.12.1"
numpy = "^1.26.4"
fastapi = "^0.110.0"
loguru = "^0.7.2"
tritonclient = {version = "2.31", extras = ["grpc"]}
uvicorn = "^0.28.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
